--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 						<!-- end logo -->
 
 						<!-- tagline -->
-						<span class="header__tagline">Research and Development<br>Consultants [RED-CON]</span>
+						<span class="header__tagline">Fortaleza Digital<br>[0xDigitalFortress]</span>
 						<!-- end tagline -->
 
 
@@ -69,10 +69,10 @@
 				<div class="col-12 col-lg-7">
 					<!-- hero first -->
 					<div class="hero__content hero__content--first">
-						<h1 class="hero__title"><strong>Protege tus activos de información</strong> contra las amenazas cibernéticas.</h1>
+						<h1 class="hero__title"><strong>Protege tu información</strong> contra las amenazas cibernéticas.</h1>
 
 						<div class="hero__btns">
-							<a href="mailto:contacto@redconsultants.pe" class="hero__btn"> Contacta a un experto </a>
+							<a href="mailto:contacto@fortaleza-digital.com" class="hero__btn"> Contacta a un experto </a>
 						</div>
 					</div>
 					<!-- end hero first -->
@@ -83,7 +83,7 @@
 					<div class="hero__content hero__content--second">
 						<!-- CTA -->
 						<a class="cta">
-							<h2 class="cta__title">RED Consultants</h2>
+							<h2 class="cta__title">Fortaleza Digital</h2>
 							<p class="cta__text">Expertos en Seguridad Informática</p>
 
 							<!-- design elements -->						
@@ -208,6 +208,7 @@
 							<li>Nuestros expertos en seguridad informática poseen las siguientes certificaciones internacionales de seguridad:</li>
 							<li>- [Maestría] Maestría en Ciberseguridad - UPC.</li>
 							<li>- [ISO 27001:2022] Senior Lead Implementer - PECB.</li>
+							<li>- [ISO 31000:2022] Risk Manager - PECB.</li>
 							<li>- [CEH] Certified Ethical Hacker.</li>
 							<li>- [PENTEST+] Certified Pentest+.</li>
 							<li>- [SEC+] Certified Security+.</li>
@@ -265,7 +266,7 @@
 			<div class="row row--relative">
 				<div class="col-12">
 					<div class="company">
-						<h2 class="company__title">Research and Development Consultants</h2>
+						<h2 class="company__title">Fortaleza Digital - [0xDigitalFortress]</h2>
 						
 						<div class="row">
 							<div class="col-12 col-xl-7">
@@ -274,7 +275,7 @@
 
 							<div class="col-12 col-xl-4 offset-xl-1">
 								<p class="company__subtitle">Oficinas:</p>
-								<p class="company__text">Jr. Jaén, Barranco, Lima, Perú.<br>contacto@redconsultants.pe</p>
+								<p class="company__text">Jr. Jaén, Barranco, Lima, Perú.<br>contacto@fortaleza-digital.com</p>
 							</div>
 						</div>
 
