--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 	<link rel="icon" type="image/png" href="icon/favicon-32x32.png" sizes="32x32">
 	<link rel="apple-touch-icon" href="icon/favicon-32x32.png">
 
-	<meta name="description" content="RED Consultants">
+	<meta name="description" content="Fortaleza Digital [0xDigitalFortress]">
 	<meta name="keywords" content="">
-	<meta name="author" content="RED Consultants">
-	<title>RED Consultants</title>
+	<meta name="author" content="Fortaleza Digital [0xDigitalFortress]">
+	<title>Fortaleza Digital</title>
 </head>
 
 <body class="body body--home">
@@ -72,7 +72,7 @@
 						<h1 class="hero__title"><strong>Protege tu información</strong> contra las amenazas cibernéticas.</h1>
 
 						<div class="hero__btns">
-							<a href="mailto:contacto@fortaleza-digital.com" class="hero__btn"> Contacta a un experto </a>
+							<a href="mailto:phc.sec.research.team@gmail.com" class="hero__btn"> Contacta a un experto </a>
 						</div>
 					</div>
 					<!-- end hero first -->
@@ -275,7 +275,7 @@
 
 							<div class="col-12 col-xl-4 offset-xl-1">
 								<p class="company__subtitle">Oficinas:</p>
-								<p class="company__text">Jr. Jaén, Barranco, Lima, Perú.<br>contacto@fortaleza-digital.com</p>
+								<p class="company__text">Jr. Jaén, Barranco, Lima, Perú.<br>phc.sec.research.team@gmail.com</p>
 							</div>
 						</div>
 
