--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 						<h1 class="hero__title"><strong>Protege tu información</strong> contra las amenazas cibernéticas.</h1>
 
 						<div class="hero__btns">
-							<a href="mailto:phc.sec.research.team@gmail.com" class="hero__btn"> Contacta a un experto </a>
+							<a href="mailto:fortaleza.digital.infosec@gmail.com" class="hero__btn"> Contacta a un experto </a>
 						</div>
 					</div>
 					<!-- end hero first -->
@@ -275,7 +275,7 @@
 
 							<div class="col-12 col-xl-4 offset-xl-1">
 								<p class="company__subtitle">Oficinas:</p>
-								<p class="company__text">Jr. Jaén, Barranco, Lima, Perú.<br>phc.sec.research.team@gmail.com</p>
+								<p class="company__text">Jr. Jaén, Barranco, Lima, Perú.<br>fortaleza.digital.infosec@gmail.com</p>
 							</div>
 						</div>
 
